[tool.poetry]
name = "servergrimoire"
version = "1.0.0"
description = "Package for record and store info about servers and their stuffs"
authors = ["Fundor333 <fundor333@fundor333.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyOpenssl = "^19.1.0"
tabulate = "^0.8.7"
requests = "^2.24.0"
dnspython = "^2.0.0"
python-whois = "^0.7.3"
Click = "^7.1.2"


[tool.poetry.dev-dependencies]
pytest = "^4.6.11"
black = { version = "19.10b0", allow-prereleases = true, python = "^3.8", markers = "platform_python_implementation == 'CPython'" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

