[tool.poetry]
name = "servergrimoire"
version = "1.0.11"
description = "Package for record and store info about servers and their stuffs"
authors = ["Fundor333 <fundor333@fundor333.com>"]

homepage = "https://github.com/fundor333/servergrimoire"
repository = "https://github.com/fundor333/servergrimoire"
license = "MIT"
readme = "README.md"

keywords = ["devops", "ssl", "sysadmin"]

classifiers = [
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Topic :: System :: Networking :: Monitoring',
    'Intended Audience :: Developers',
    "Development Status :: 4 - Beta",
]

[tool.poetry.dependencies]
python = "^3.8"
pyOpenssl = "^19.1.0"
tabulate = "^0.8.7"
requests = "^2.24.0"
dnspython = "^2.0.0"
python-whois = "^0.7.3"
Click = "^7.1.2"
loguru = "^0.5.2"
termcolor = "^1.1.0"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6.11"
black = { version = "19.10b0", allow-prereleases = true, python = "^3.8", markers = "platform_python_implementation == 'CPython'" }

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."console_scripts"]
"servergrimoire" = "servergrimoire.__main__:launcher"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


