[tool.poetry]
name = "servergrimoire"
version = "1.7.5"
description = "Package for record and store info about servers and their stuffs"
authors = ["Fundor333 <fundor333@fundor333.com>"]

homepage = "https://github.com/fundor333/servergrimoire"
repository = "https://github.com/fundor333/servergrimoire"
license = "MIT"
readme = "README.md"

keywords = ["devops", "ssl", "sysadmin"]

classifiers = [
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Topic :: System :: Networking :: Monitoring',
    'Intended Audience :: Developers',
    "Development Status :: 4 - Beta",
]

[tool.poetry.dependencies]
python = "^3.8"
pyOpenssl = "^19.1.0"
requests = "^2.24.0"
dnspython = "^2.1.0"
python-whois = "^0.7.3"
Click = "^7.1.2"
rich = "^9.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pre-commit = "^2.7.1"
black = { version = "20.8b1", allow-prereleases = true, python = "^3.8", markers = "platform_python_implementation == 'CPython'" }
mypy = "^0.790"
mkdocs = "^1.1.2"

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."console_scripts"]
"servergrimoire" = "servergrimoire.__main__:launcher"
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


